fix katex syntax for 1902

--- a/source/post/2019/1902.md
+++ b/source/post/2019/1902.md
@@ -221,7 +221,7 @@ Spanner[^spanner]
 
 > 在原文里描述的是每个写事务都会写入时间戳到对应的 **Paxos group** 里，但是我的理解因为已经用 **Paxos group** 对分片进行选主了。按理在leader确定的情况下其实可以直接由这个分片的leader来分配这个时间戳。但是这样在容灾和副在均衡期间这个分配可能延时会变高，但是毕竟这是少频率操作，而大部分情况下的写请求里分配时间戳不走 **Paxos group** ，可以大幅提高响应速度。
 
-\\\( t^{safe}\_{TM} \\\) 的定义比较复杂一些，如果涉及的分片没有进行中的事务，则 \\\( t^{safe}\_{TM} = \infty \\\) 。否则安全时间设为涉及的所有分组里 **最小的事务准备阶段时间-1** ， \\\( t^{safe}\_{TM} = \min\_i(s^{prepare}\_{i,g})  \\\) 。
+\\\( t^{safe}\_{TM} \\\) 的定义比较复杂一些，如果涉及的分片没有进行中的事务，则 \\\( t^{safe}\_{TM} = \infty \\\) 。否则安全时间设为涉及的所有分组里 **最小的事务准备阶段时间-1** ， \\\( t^{safe}\_{TM} = \min\_i(s^{prepare}\_{i,g}) - 1 \\\) 。
 
 #### 读写事务
 
@@ -268,7 +268,7 @@ Paper里只是简单提了下关于时间方面的同步流程。大体上就三
 
 个人感觉 **Spanner**[^spanner] 和 **Percolator**[^percolator] 相比最大的特点是用基 **Paxos group** 和 **TrueTime API** 代替了单点的时间戳服务。从而实现了真正意义上的平行扩容。这篇Paper没有太多提及事务的故障处理和冲突处理的部分，内容可能在我即将要看的F1 \( **Spanner**[^spanner] 的一个客户端实现 \) 里。
 
-我的理解上事务的故障处理就依赖协调者，如果协调者超时或者通知放弃，则直接事务失败。而前面的 **Wound-wait** 策略是用于死锁的处理的，但是这里有一个问题。如果事务A和事务B互相锁资源导致死锁，这两个事务可能有重合的写分组，但是又不完全一样，那么他们的协调者可能也不一样。假设死锁的资源是r1和r2，这时候分配的写入时间可能会有 \\\( t_{r1}(A) < t_{r1}(B) \\\)  但是 \\\( t_{r2}(A) > t_{r2}(B) \\\)  。这会导致两个事务都放弃重试，这种情况下随机一段时间后重试，这种机制有点像 **Raft**[^raft] 的设计。但是在另一种情况下， \\\( t_{r1}(A) > t_{r1}(B) \\\) 并且 \\\( t_{r2}(A) > t_{r2}(B) \\\) 。并且B后抵达，按照**Wound-wait** 策略，B会覆盖A的锁。但是A怎么得知锁被覆盖了呢？文中没有提及，我的想法是第一种方案可以由B的协调者来通知A的协调者，但是这个过程也可能出现故障。另一种可能更好的方案是A的协调者在等待安全时间误差之后再向所有的锁确认一遍锁是否被覆盖，这样能把异常处理逻辑收敛到一个协调者上，因为如果等待时间误差过后所有的锁如果都没被覆盖，那么再之后的事务的时间必然晚于A了。当然这会导致正常流程多一组通信，然而根据 **Spanner**[^spanner] 的设计延迟和后面的性能报告，我觉得这个通信开销还是可以接受的。
+我的理解上事务的故障处理就依赖协调者，如果协调者超时或者通知放弃，则直接事务失败。而前面的 **Wound-wait** 策略是用于死锁的处理的，但是这里有一个问题。如果事务A和事务B互相锁资源导致死锁，这两个事务可能有重合的写分组，但是又不完全一样，那么他们的协调者可能也不一样。假设死锁的资源是r1和r2，这时候分配的写入时间可能会有 \\\( t^{r1}\_{A} < t^{r1}\_{B} \\\)  但是 \\\( t^{r2}\_{A} > t^{r2}\_{B} \\\)  。这会导致两个事务都放弃重试，这种情况下随机一段时间后重试，这种机制有点像 **Raft**[^raft] 的设计。但是在另一种情况下， \\\( t^{r1}\_{A} > t^{r1}\_{B} \\\) 并且 \\\( t^{r2}\_{A} > t^{r2}\_{B} \\\) 。并且B后抵达，按照**Wound-wait** 策略，B会覆盖A的锁。但是A怎么得知锁被覆盖了呢？文中没有提及，我的想法是第一种方案可以由B的协调者来通知A的协调者，但是这个过程也可能出现故障。另一种可能更好的方案是A的协调者在等待安全时间误差之后再向所有的锁确认一遍锁是否被覆盖，这样能把异常处理逻辑收敛到一个协调者上，因为如果等待时间误差过后所有的锁如果都没被覆盖，那么再之后的事务的时间必然晚于A了。当然这会导致正常流程多一组通信，然而根据 **Spanner**[^spanner] 的设计延迟和后面的性能报告，我觉得这个通信开销还是可以接受的。
 
 目前我的理解也可能有些差错（英语不是很好）。如果有误也欢迎指正哈。
 
