--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -34,27 +34,27 @@ type: post
 主流分布式KVS的比较
 ================================================
 
-| 系统名词      | 扩容设计    | 内存模型          | 针对单个Key的一致性策略 | 针对多个Key一致性策略 |
-|---------------|-------------|-------------------|-------------------------|-----------------------|
-| Masstree      | 多核        | 共享内存          | 线性                    | 无                    |
-| Bw-tree       | 多核        | 共享内存          | 线性                    | 无                    |
-| PALM          | 多核        | 共享内存          | 线性                    | 无                    |
-| MICA          | 多核        | 共享内存          | 线性                    | 无                    |
-| Redis         | 单核        | N/A               | 线性                    | 串行化                |
-| COPS, Bolt-on | 分布式      | 消息队列          | 因果一致性 | 因果一致性 |
-| Bayou         | 分布式      | 消息队列          | 最终一致性, 单调读/写, Read Your Writes | 最终一致性 |
-| Dynamo        | 分布式      | 消息队列          | 线性, 最终一致性 | 无 |
-| Cassandra     | 分布式      | 消息队列          | 线性, 最终一致性 | 无 |
-| PNUTS         | 分布式      | 消息队列          | 线性写, 单调读 | 无 |
-| CouchDB       | 分布式      | 消息队列          | 最终一致性 | 无 |
-| Voldemort     | 分布式      | 消息队列          | 线性, 最终一致性 | 无 |
-| HBase         | 分布式      | 消息队列          | 线性 | 无 |
-| Riak          | 分布式      | 消息队列          | 最终一致性 | 无 |
-| DocumentDB    | 分布式      | 消息队列          | 最终一致性, Session, Bounded Staleness, 线性 | 无 |
-| Memcached     | 多核&分布式 | 共享内存&消息队列 | 线性 | 无 |
-| MongoDB       | 多核&分布式 | 共享内存&消息队列 | 线性 | 无 |
-| H-Store       | 多核&分布式 | 消息队列          | 线性 | 串行化 |
-| ScyllaDB      | 多核&分布式 | 消息队列          | 线性, 最终一致性 | 无 |
+| 系统名词      | 扩容设计    | 内存模型          | 针对单个Key的一致性策略                                                                  | 针对多个Key一致性策略            |
+| ------------- | ----------- | ----------------- | ---------------------------------------------------------------------------------------- | -------------------------------- |
+| Masstree      | 多核        | 共享内存          | 线性                                                                                     | 无                               |
+| Bw-tree       | 多核        | 共享内存          | 线性                                                                                     | 无                               |
+| PALM          | 多核        | 共享内存          | 线性                                                                                     | 无                               |
+| MICA          | 多核        | 共享内存          | 线性                                                                                     | 无                               |
+| Redis         | 单核        | N/A               | 线性                                                                                     | 串行化                           |
+| COPS, Bolt-on | 分布式      | 消息队列          | 因果一致性                                                                               | 因果一致性                       |
+| Bayou         | 分布式      | 消息队列          | 最终一致性, 单调读/写, Read Your Writes                                                  | 最终一致性                       |
+| Dynamo        | 分布式      | 消息队列          | 线性, 最终一致性                                                                         | 无                               |
+| Cassandra     | 分布式      | 消息队列          | 线性, 最终一致性                                                                         | 无                               |
+| PNUTS         | 分布式      | 消息队列          | 线性写, 单调读                                                                           | 无                               |
+| CouchDB       | 分布式      | 消息队列          | 最终一致性                                                                               | 无                               |
+| Voldemort     | 分布式      | 消息队列          | 线性, 最终一致性                                                                         | 无                               |
+| HBase         | 分布式      | 消息队列          | 线性                                                                                     | 无                               |
+| Riak          | 分布式      | 消息队列          | 最终一致性                                                                               | 无                               |
+| DocumentDB    | 分布式      | 消息队列          | 最终一致性, Session, Bounded Staleness, 线性                                             | 无                               |
+| Memcached     | 多核&分布式 | 共享内存&消息队列 | 线性                                                                                     | 无                               |
+| MongoDB       | 多核&分布式 | 共享内存&消息队列 | 线性                                                                                     | 无                               |
+| H-Store       | 多核&分布式 | 消息队列          | 线性                                                                                     | 串行化                           |
+| ScyllaDB      | 多核&分布式 | 消息队列          | 线性, 最终一致性                                                                         | 无                               |
 | Anna          | 多核&分布式 | 消息队列          | 最终一致性, 因果一致性, Item Cut, Writes Follow Reads, 单调读/写, Read Your Writes, PRAM | Read Committed, Read Uncommitted |
 
 > 一致性说明:
@@ -82,10 +82,27 @@ actor模型
 
 每个actor线程由自己的数据变更集(**changeset**)，然后定期访问广播通道执行合并操作。
 
+![1999-01.png](1999-01.png)
+
+弹性的一致性策略
+================================================
+[Anna][^anna] 是通过设计成一个无需交互，并且让内部符合ACI特性来实现这个高性能高并发的KVS的。[Anna][^anna] 通过一种自底向上的方法，通过把复杂数据结构切割成一个一个的 **ACI Building Blocks（Lattice）** 来保证整体的保持ACI特性。系统内置了一些一致性模型的设计，然后用户也可以自定义Merge函数
+
+> ACI是指：
+> + 交换律（Commutativity）
+> + 结合律（Associativity）
+> + 等幂性（Idempotence）
+ 
 冲突
 ================================================
 自定义 [最终一致性][5] 下的冲突解决策略。
 
+
+总结
+================================================
+最终一致性和强一致性的数据库系统还是有很大区别，最终一致性不能保证大家看到的中间状态是一致的，并且可能需要自己去选择或者提供冲突时的处理方法。感觉上可能比较适合非关键性数据的分发和存储。至少在游戏项目中，感觉更实用的还是能保证强一致性的系统，即便是NoSQL系统。因为很多东西有比较复杂的逻辑关系，不太能接受多个节点结果不一致的状态。
+
+上面 [Anna][^anna] 和其他系统的比较里也有列出一些强一致性的系统，我觉得和这些强一致的系统比性能其实不太公平。但是 [Anna][^anna] 的一些设计层面的东西还是值得参考的，比如它对worker的设计和考量。这方面它和 [pedis][2] 也很像，而且 [pedis][2] 性能比它没差太多，但是我的理解没错的话它可以保持强一致，感觉更胜一筹。当然 [pedis][2] 功能上目前实现也还是弱了一些，事务的支持和CAS的支持都没有。也就是说乐观锁和悲观锁都还不支持，目前还是没法用于要求强一致的业务里，也就和 [Anna][^anna] 没太大区别了。
 
 [^anna]: http://db.cs.berkeley.edu/jmh/papers/anna_ieee18.pdf "Anna: A KVS For Any Scale"
 [^redis]: https://redis.io "Redis"
