--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -73,30 +73,48 @@ type: post
 > + [**Read Committed**][13] 是指事务读取数据时，不允许看到其他未提交事务所写入的数据，通常涉及多个事务并发执行且需要访问同一组数据；
 > See https://en.wikipedia.org/wiki/Consistency_model for more details
 
-Anna架构设计
+[Anna][^anna] 架构设计
 ================================================
 
-actor模型
+[Anna][^anna] 整体上依赖 [**bounded join semilattice**][14] (文中简称 [lattice][14] ) 的核心设计，不知道该怎么翻译了。
 
-多线程，按CPU核心数分配线程。
+数学上 [Semilattice][14] 符合 **ACI** 特性：
 
-每个actor线程由自己的数据变更集(**changeset**)，然后定期访问广播通道执行合并操作。
++ 交换律（Commutativity）: \\\( \\sqcup (a, b) = \\sqcup (b, a), \\forall_{a,b} \\in S \\\)  ，即操作和顺序无关
++ 结合律（Associativity）: \\\( \\sqcup (\\sqcup (a, b), c) = \\sqcup (a, \\sqcup (b, c)), \\forall_{a,b,c} \\in S \\\) ，即操作和先后次序无关
++ 幂等性（Idempotence）: \\\( \sqcup (a, a) = a, \\forall_{a} \\in S \\\) ，即操作多次不影响结果
++ **join-semilattice** : join操作 \\\( \\sqcup (a, b) \\\) 指a,b的最小上界。
+    > 这里是数学定义，我的理解在 [Anna][^anna] 中指数据合并操作。
+
++ **bounded** : 指存在特定元素 **1**，使得 \\\( \\sqcup (a, 1) = a , \\forall_{a,1} \\in S \\\)
+
+详见维基百科: https://en.wikipedia.org/wiki/Semilattice
+
+我的理解就是一个比较细粒度的模块化数据块，互相之间没有强交互和关联，大多数情况下仅处理自己的数据集。然后对于数据合并的操作，要设计成符合上面的 **ACI** 特性。
+
+在 [lattice][14] 的基础上，很容易就可以设计出适合这种场景的分布式状态模型和通信模型。
+
+整个架构使用了actor模型。和 [seastar][15] 框架相似，系统采用多线程结构，并且按CPU核心数分配线程。并且和 golang 的核心思想一样，用 **Message-passing** 来 **shared-memory** 。 这样虽然是多线程，但是每个线程跑自己的 **Actor Core** ，在业务处理的时候互相之间几乎不需要互相通信。每个actor线程由自己的数据变更集(**changeset**)，然后定期访问广播通道执行集群管理或者是合并操作。
 
 ![1999-01.png](1999-01.png)
 
-弹性的一致性策略
-================================================
-[Anna][^anna] 是通过设计成一个无需交互，并且让内部符合ACI特性来实现这个高性能高并发的KVS的。[Anna][^anna] 通过一种自底向上的方法，通过把复杂数据结构切割成一个一个的 **ACI Building Blocks（Lattice）** 来保证整体的保持ACI特性。系统内置了一些一致性模型的设计，然后用户也可以自定义Merge函数
+> 文中没有提到数据分片的过程，但是根据它提到的整个 [lattice][14] 是无序的，并且 **Actor Core** 之间是弱交互。我估计sharding方案不外乎是一致性哈希。然后可能在调整负载均衡节点、故障转移的时候才会涉及访问广播通道和合并操作。其他情况下像执行命令和主从同步数据都是单向的。
 
-> ACI是指：
-> + 交换律（Commutativity）
-> + 结合律（Associativity）
-> + 等幂性（Idempotence）
- 
-冲突
+弹性可扩展的一致性策略
 ================================================
-自定义 [最终一致性][5] 下的冲突解决策略。
+[Anna][^anna] 是通过设计成一个无需交互，并且让内部符合ACI特性来实现这个高性能高并发的KVS的。[Anna][^anna] 通过一种自底向上的方法，通过把复杂数据结构切割成一个一个的 [**ACI Building Blocks（Lattice）**][14] 来保证整体的保持ACI特性。系统内置了一些一致性模型的设计，然后用户也可以自定义Merge函数。 [Anna][^anna] 的设计重点之一就是方便用户可以用 [Anna][^anna] 已有提供好的符合 **ACI** 的 [lattice][14] 来组合成自己需要的也符合 **ACI** 的新形态。然后以此来很方便地实现上面提到的那么多种一致性策略。
 
+> 文中说是以C++模板来实现易扩展的 [lattice][14] 的。感觉和STL的思路比较像。
+
+比如说实现了 **MapLattice** （KV结构） 、 **PairLattice** （带版本号的数据对） 、 **MaxIntLattice** （递增整数） 、 **ValueLattice** （用户自定义数据）。可以按下面的结构实现 [**因果一致性(Causal)**][4]。
+
+![1999-02.png](1999-02.png)
+
+如图，使用Key为 ClientID， Value为 **MaxIntLattice** 的 **MapLattice** 来实现因果一致性所需的 [向量时钟(Vector Clock)][16] 。 大部分情况下，分片稳定并且系统运行良好的情况下，数据的因果关系可以通过 [向量时钟(Vector Clock)][16] 判定出来。少数情况下，如果发生了冲突，就要走冲突合并流程了。只要合并操作符合上面的 **ACI** 特性，等到一定时间窗以后，无论哪个节点先执行合并、数据合并的顺序是怎样，一定会有一个统一的最终结果。
+
+> 比如合并数据的时候采用按时间+节点ID排序，然后舍弃老数据。就是无论怎么合并。最终的结果一定是一致的。
+
+再比如 [**Read Committed**][13] 的一致性策略。
 
 总结
 ================================================
@@ -123,3 +141,6 @@ actor模型
 [11]: https://en.wikipedia.org/wiki/PRAM_consistency
 [12]: https://jepsen.io/consistency/models/read-uncommitted
 [13]: https://jepsen.io/consistency/models/read-committed
+[14]: https://en.wikipedia.org/wiki/Semilattice
+[15]: https://github.com/scylladb/seastar
+[16]: https://en.wikipedia.org/wiki/Vector_clock
