--- a/source/post/2019/1904.md
+++ b/source/post/2019/1904.md
@@ -36,41 +36,34 @@ C++20 整个协程体系是 **"无栈协程"** 的思路，整个功能是需要
 
 ```cpp
 COROUTINE_OBJECT func(args...) {
-    P p(promise_constructor_arguments);
-    // 这个P是自己定义的 using P = COROUTINE_OBJECT::promise_type;
-    // promise_constructor_arguments 是空或者函数的参数的左值传入 args...
-
-    COROUTINE_OBJECT r = p.get_return_object();
-    if (nullptr == r) {
-        r = p.get_return_object_on_allocation_failure(); // noexcept
-    }
-
-    co_await p.initial_suspend();   // 初始化接口
-
     try {
-        // 原函数体 ...
-        p.return_void() or p.return_value(RET) // 取决于函数体里有没有 co_return RET
-    } catch(...) {
-        p.unhandled_exception();    // 未捕获的异常接口
-    }
-final_suspend:
-    co_await p.final_suspend();     // final suspend point
+        P p(promise_constructor_arguments);
+        // 这个P是自己定义的 using P = COROUTINE_OBJECT::promise_type;
+        // 文档上说promise_constructor_arguments 是空或者函数的参数的左值传入 args... ，但是目前版本的MSVC还仅支持空参数列表
 
-    return r;
+        COROUTINE_OBJECT r = p.get_return_object();
+
+        co_await p.initial_suspend();   // 初始化接口
+
+        try {
+            // 原函数体 ...
+            p.return_void() or p.return_value(RET) // 取决于函数体里有没有 co_return RET
+        } catch(...) {
+            p.unhandled_exception();    // 未捕获的异常接口
+        }
+
+    final_suspend:
+        co_await p.final_suspend();     // final suspend point
+
+        return r;
+    } catch(...) {
+        return COROUTINE_OBJECT::promise_type::get_return_object_on_allocation_failure(); // noexcept
+    }
 }
 ```
 
-```co_await``` 关键字先简单理解为判定是否需要切出，它的功能和其他的部分连带比较多，没法单独出现，所以放在最后。
+```co_await``` 关键字先简单理解为判定是否需要切出，后面会有更加详细一点的解释。
 而协程函数一切的核心都在于上面的 ```COROUTINE_OBJECT``` 类型。里面有一些规范， ```co_yield``` 和 ```co_return``` 涉及 ```COROUTINE_OBJECT``` 里的 ```COROUTINE_OBJECT::promise_type``` 类型。必须实现某些公共接口和函数功能接口。而返回到外层的 ```COROUTINE_OBJECT``` 对象里也需要保存协程的handle(目前是 ```std::experimental::coroutine_handle<PROMISE_TYPE>``` )，以用于后续控制协程的上下文切换使用。 同样， 下面的例子因为必须写一个协程入口对象，所以有一部分比较烦杂的必须接入的代码。
-
-co_yield
-================================================
-
-Paper里最先提到的是 ```co_await``` ，但是我觉得从 ```co_yield``` 开始入手比较易于理解。
-
-```co_yield``` 要求实现 ```COROUTINE_OBJECT::promise_type::yield_value(参数)``` 。比较贴近于单独一次异步调用的实现。
-
-```co_yield VALUE``` 简单的描述是相当于 ```co_await p.yield_value(VALUE)``` 。 然后awaiter是一个临时变量，在这条语句结束后析构。
 
 ```dot
 digraph yield_relation {
@@ -84,11 +77,181 @@ digraph yield_relation {
   edge [fontsize="16", fontname="Noto Sans, DejaVu Sans Mono, Noto Sans Mono CJK SC"];
 
 
-  node_promise [label="Promise|get_return_object_on_allocation_failure|get_return_object|initial_suspend|final_suspend|unhandled_exception|return_void|yield_value", shape = "record"];
+  node_custom_promise [label="Custom Promise|get_return_object_on_allocation_failure|get_return_object|initial_suspend|final_suspend|unhandled_exception|return_void|yield_value", shape = "record"];
   node_handle [label="std::experimental::coroutine_handle<T>", shape = "record"];
-  node_custom_generator [label="Custom Generator|handle", shape = "record"];
+  node_custom_future [label="Custom Future|handle", shape = "record"];
+  node_custom_awaitable [label="Custom Future|bool await_ready() const|void await_resume()|void await_suspend(handle from)", shape = "record"];
 }
 ```
+
+协程闭包类型(promise)
+================================================
+要支持协程函数，首先要准备一个包装的类型，里面包含 ```promise_type``` ，然后提供基本的创建、维护handle的函数。比如:
+
+```cpp
+struct coroutine_task {
+    struct promise_type {
+        coroutine_task get_return_object() {
+            return coroutine_task{};
+        }
+        bool initial_suspend() const {
+            return false;
+        }
+        bool final_suspend() const {
+            return false;
+        }
+    };
+};
+```
+
+然后，就可以声明使用协程函数 ```coroutine_task f();``` 了。但是要让他转变为协程函数，还需要至少接入一样协程关键字才行。我们先从最基本的 ```co_await``` 开始。
+
+关键字 - co_await
+================================================
+
+```co_await``` 是一个操作符，所以我们只要实现这个操作符重载就可以实现协程等待任意类型。 当然，返回的类型要求实现 ```bool await_ready(T&) noexcept``` 、 ```void await_suspend(T&, std::experimental::coroutine_handle<T>) noexcept``` 、 ```void await_resume(T&) noexcept``` 这三个接口。比如我们实现一个 ```co_wait``` 后结束的结构，可以按下面这种接入方式:
+
+```cpp
+struct wait_some_times {
+    int left_times;
+    std::experimental::coroutine_handle<> handle;
+    wait_some_times(int t) : left_times(t), handle(nullptr) {}
+};
+
+struct suspend_some_times {
+    wait_some_times& d;
+    suspend_some_times(wait_some_times& _d): d(_d) {}
+    bool await_ready() noexcept {
+        std::cout << "call await_ready: " << d.left_times << std::endl;
+        return d.left_times <= 0;
+    }
+
+    void await_suspend(std::experimental::coroutine_handle <> h) noexcept {
+        // 记下来handle以便后面resume用
+        d.handle = h;
+
+        std::cout << "call await_suspend: " << (--d.left_times) << std::endl;
+    }
+
+    void await_resume() noexcept {
+        std::cout << "call await_resume: " << d.left_times << std::endl;
+        d.handle = nullptr;
+    }
+};
+```
+
+然后把整个连起来，完整的例子如下:
+
+```cpp
+#include <iostream>
+#include <iomanip>
+#include <vector>
+
+#include <memory>
+
+#include <experimental/coroutine>
+
+struct wait_some_times {
+    int left_times;
+    std::experimental::coroutine_handle<> handle;
+    wait_some_times(int t) : left_times(t), handle(nullptr) {}
+};
+
+struct suspend_some_times {
+    wait_some_times& d;
+    suspend_some_times(wait_some_times& _d): d(_d) {}
+    bool await_ready() noexcept {
+        std::cout << "call await_ready: " << d.left_times << std::endl;
+        return d.left_times <= 0;
+    }
+
+    void await_suspend(std::experimental::coroutine_handle <> h) noexcept {
+        // 记下来handle以便后面resume用
+        d.handle = h;
+
+        std::cout << "call await_suspend: " << (--d.left_times) << std::endl;
+    }
+
+    void await_resume() noexcept {
+        std::cout << "call await_resume: " << d.left_times << std::endl;
+        d.handle = nullptr;
+    }
+};
+
+struct coroutine_task {
+    struct promise_type {
+        coroutine_task get_return_object() {
+            return coroutine_task{};
+        }
+        bool initial_suspend() const {
+            return false;
+        }
+        bool final_suspend() const {
+            return false;
+        }
+    };
+};
+
+auto operator co_await(wait_some_times& x) noexcept {
+    return suspend_some_times{ x };
+}
+
+coroutine_task f(wait_some_times& waiter) {
+    std::cout<< "begin to co_await" << std::endl;
+    co_await waiter; // 只有前三次会协程切出
+    co_await waiter;
+    co_await waiter;
+    co_await waiter; // 这之后await_ready返回true了，不会再切出
+    co_await waiter;
+    std::cout<< "end of corotine" << std::endl;
+}
+
+int main(int argc, char* argv[]) {
+#ifdef __cpp_coroutines
+    std::cout << "__cpp_coroutines: " << __cpp_coroutines << std::endl;
+#endif
+    wait_some_times waiter{ 3 };
+    f(waiter);
+
+    while (waiter.handle && !waiter.handle.done()) {
+        std::cout << "about to resume: "<< waiter.left_times << std::endl;
+        // 这里用传出的handle来恢复切入协程
+        waiter.handle.resume();
+    }
+
+    return 0;
+}
+```
+
+输出如下:
+```
+__cpp_coroutines: 201703
+begin to co_await
+call await_ready: 3
+call await_suspend: 2
+about to resume: 2
+call await_resume: 2
+call await_ready: 2
+call await_suspend: 1
+about to resume: 1
+call await_resume: 1
+call await_ready: 1
+call await_suspend: 0
+about to resume: 0
+call await_resume: 0
+call await_ready: 0
+call await_resume: 0
+call await_ready: 0
+call await_resume: 0
+end of corotine
+```
+
+关键字 - co_yield
+================================================
+
+```co_yield``` 要求实现 ```COROUTINE_OBJECT::promise_type::yield_value(参数)``` 。比较贴近于单独一次异步调用的实现。
+
+```co_yield VALUE``` 简单的描述是相当于 ```co_await p.yield_value(VALUE)``` 。
 
 ```cpp
 #include <iostream>
@@ -224,7 +387,13 @@ resumed got rpc_res1: 3(@00881B1C), rpc_res2: 5(@00881B30)
 g2 value:00881B30
 ```
 
-co_await
+关键字 - co_return
+================================================
+最后一个是 ```co_return``` 。 这个关键字主要是用于直接退出协程函数的, 因为协程函数的返回值是我们自己定义的这个 ```COROUTINE_OBJECT``` ， 所以函数逻辑附带的返回值就要用这个关键字来实现。 这个关键字要求实现 ```COROUTINE_OBJECT::promise_type::return_value(参数)``` 或者 ```COROUTINE_OBJECT::promise_type::return_void()``` 。如果协程函数中有 ```co_return VALUE``` 。则是最终调用了 ```COROUTINE_OBJECT::promise_type::return_value(VALUE)``` ， 否则是调用 ```COROUTINE_OBJECT::promise_type::return_void()``` 。
+
+我们可以把协程函数的最终结果放在这里面来实现转储到某个地方。这部分的代码和 yield 的很像。就不另外贴了，下面贴一个全部整合到一起的吧。
+
+全功能整合到一起
 ================================================
 
 ```cpp
@@ -236,32 +405,179 @@ co_await
 
 #include <experimental/coroutine>
 
+static std::vector<std::pair<int*, std::experimental::coroutine_handle<> > > g_test_rpc_manager;
+static int g_test_rpc_fake_data = 0;
+
 struct test_rpc_generator {
-    test_rpc_generator(const test_rpc_generator&) = delete;
-    test_rpc_generator(test_rpc_generator&& other): coro(other.coro) {
-        other.coro = nullptr;
+    struct test_rpc_data {
+        int final_value;
+        int yield_times;
+
+        std::vector<std::experimental::coroutine_handle<> > follower;
     };
-    ~test_rpc_generator() {
-        if (coro) {
-            coro.destroy();
-        }
-    }
 
     struct promise_type;
-    using handle = std::experimental::coroutine_handle<promise_type>;
+    using data_ptr = std::shared_ptr<test_rpc_data>;
 
     struct promise_type {
-        int* current_value;
+        data_ptr data;
         static auto get_return_object_on_allocation_failure() {
-            return test_rpc_generator{nullptr};
+            return test_rpc_generator{ nullptr };
         }
 
         auto get_return_object() {
-            return test_rpc_generator{handle::from_promise(*this)};
+            data = std::make_shared<test_rpc_data>();
+            if (data) {
+                data->final_value = 0;
+                data->yield_times = 0;
+            }
+            return test_rpc_generator{ data };
         }
 
         auto initial_suspend() {
-            current_value = nullptr;
+            data = nullptr;
+            return std::experimental::suspend_never{}; // STL提供了一些自带的awaiter实现，我们其实很多情况下也不需要另外写，直接用STL就好了
+        }
+
+        auto final_suspend() {
+            return std::experimental::suspend_always{}; // 和上面一样，也是STL自带的awaiter实现
+        }
+
+        void unhandled_exception() {
+            std::terminate();
+        }
+
+        // 用以支持 co_return
+        void return_value(int v) {
+            // 最终co_return时保存最终数据
+            if (data) {
+                data->final_value = v;
+
+                for (auto& h : data->follower) {
+                    h.resume();
+                }
+            }
+        }
+
+        // 用以支持 co_yield
+        auto yield_value(int* value) {
+            // 每次调用都会执行,创建handle用以后面恢复数据
+            g_test_rpc_manager.emplace_back(std::make_pair(value, std::experimental::coroutine_handle<>::from_address(
+                std::experimental::coroutine_handle<promise_type>::from_promise(*this).address()
+            )));
+
+            if (data) {
+                ++data->yield_times;
+            }
+
+            return std::experimental::suspend_always{};
+        }
+    };
+
+    int value() const {
+        if (data) {
+            return data->final_value;
+        }
+        return 0;
+    }
+
+    int yield_times() const {
+        if (data) {
+            return data->yield_times;
+        }
+
+        return -1;
+    }
+
+    void add_follower(std::experimental::coroutine_handle<> h) {
+        if (data) {
+            data->follower.emplace_back(std::move(h));
+        }
+    }
+private:
+    test_rpc_generator(data_ptr d) :  data(d) {}
+    data_ptr data;
+};
+
+
+// 下面的接入用非侵入式的方式支持 co_await test_rpc_generator
+bool await_ready(const test_rpc_generator& g) noexcept {
+    return g.value() > 0;
+}
+
+void await_resume(test_rpc_generator& g) {
+    std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": test_rpc_generator resume for " << g.yield_times() << " time(s)"<< std::endl;
+}
+
+void await_suspend(test_rpc_generator& g, std::experimental::coroutine_handle<> h) {
+    std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": test_rpc_generator yield for " << g.yield_times() << " time(s), wait for " << h.address() << std::endl;
+
+    // 记录要恢复父协程
+    if (h) {
+        g.add_follower(h);
+    }
+}
+
+// 异步协程函数
+test_rpc_generator f() {
+    int rpc_res1, rpc_res2;
+    co_yield &rpc_res1;
+    // _alloca(rpc_res1);
+    std::cout << "resumed got rpc_res1: " << rpc_res1 << "(@" << &rpc_res1 << ")" << std::endl;
+
+    co_yield &rpc_res2;
+    // _alloca(rpc_res2);
+    std::cout << "resumed got rpc_res1: " << rpc_res1 << "(@" << &rpc_res1 << ")" << ", rpc_res2: " << rpc_res2 << "(@" << &rpc_res2 << ")" << std::endl;
+
+    // 模拟多次RPC然后返回最终结果
+    co_return rpc_res1 * 100 + rpc_res2;
+}
+
+// 这里模拟生成数据
+void test_rpc_manager_run() {
+    std::vector<std::pair<int*, std::experimental::coroutine_handle<> > > rpc_manager;
+    g_test_rpc_manager.swap(rpc_manager);
+
+    for (auto& generator : rpc_manager) {
+        if (generator.first) {
+            *generator.first = ++g_test_rpc_fake_data;
+        }
+
+        if (generator.second && !generator.second.done()) {
+            generator.second.resume();
+        }
+    }
+}
+
+struct test_task {
+    using ptr_t = std::shared_ptr<test_task>;
+
+    test_task(int ms) : status(0), max_status(ms) {}
+
+    bool is_ready() const noexcept {
+        return status >= max_status;
+    }
+
+    int status;
+    int max_status;
+    std::vector<std::experimental::coroutine_handle<> > follower;
+};
+
+struct test_task_future {
+    struct promise_type;
+    using ptr_t = std::shared_ptr<test_task>;
+    using handle = std::experimental::coroutine_handle<promise_type>;
+
+    struct promise_type {
+        static auto get_return_object_on_allocation_failure() {
+            return test_task_future{ nullptr };
+        }
+
+        auto get_return_object() {
+            return test_task_future{ handle::from_promise(*this) };
+        }
+
+        auto initial_suspend() {
             return std::experimental::suspend_never{};
         }
 
@@ -274,77 +590,29 @@ struct test_rpc_generator {
         }
 
         void return_void() {
+            if (task) {
+                for (auto& h : task->follower) {
+                    h.resume();
+                }
+            }
         }
 
-        auto yield_value(int* value) {
-            current_value = value;
-            return std::experimental::suspend_always{};
-        }
+        ptr_t task;
     };
 
+    // 下面的接入用非侵入式的方式支持 co_await test_task::ptr_t
+    struct awaitable {
+        awaitable(const test_task_future& f) : data(f.get_task()) {
+            promise_type* p = f.promise();
+            if (p != nullptr) {
+                p->task = data;
+            }
+        };
 
-    int* value() const {
-        if (coro) {
-            return coro.promise().current_value;
-        }
-
-        return 0;
-    }
-
-    bool move_next(int rpc_result) {
-        if (coro && coro.promise().current_value) {
-            *coro.promise().current_value = rpc_result;
-        }
-
-        return coro ? (coro.resume(), !coro.done()) : false; 
-    }
-
-    bool await_ready() const {
-        return !coro || coro.done();
-    }
-
-private:
-    test_rpc_generator(handle h) : coro(h) {}
-    handle coro;
-};
-
-test_rpc_generator f() {
-    int rpc_res1, rpc_res2;
-    co_yield &rpc_res1;
-    // _alloca(rpc_res1);
-    std::cout<< "resumed got rpc_res1: "<< rpc_res1<< "(@"<< &rpc_res1<< ")" << std::endl;
-
-    co_yield &rpc_res2;
-    // _alloca(rpc_res2);
-    std::cout<< "resumed got rpc_res1: "<< rpc_res1<< "(@"<< &rpc_res1<< ")" << ", rpc_res2: "<< rpc_res2 <<"(@"<< &rpc_res2<< ")"<< std::endl;
-}
-
-struct test_task {
-    using ptr_t = std::shared_ptr<test_task> ;
-
-    test_task(int ms): status(0), max_status(ms) {}
-
-    bool is_ready() const noexcept {
-		return status >= max_status;
-    }
-
-    int status;
-    int max_status;
-};
-
-
-struct test_task_future {
-    struct promise_type;
-    using ptr_t = std::shared_ptr<test_task>;
-    using handle = std::experimental::coroutine_handle<promise_type>;
-
-    struct awaiter_base {
-        awaiter_base(ptr_t p): data(p) {};
-
-        bool await_ready() const { 
+        bool await_ready() const {
             bool ret = !data || data->is_ready();
             if (ret) {
-                std::cout<< std::setw(4)<< __LINE__<< ": task "<< data.get()<< " ready"<< std::endl;
+                std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << data.get() << " ready" << std::endl;
             }
 
             return ret;
@@ -352,156 +620,180 @@ struct test_task_future {
 
         void await_resume() {
             if (data) {
-                ++ data->status;
+                ++data->status;
+                std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << data.get() << " resume to " << (data ? data->status : -1) << std::endl;
             }
-
-            std::cout<< std::setw(4)<< __LINE__<< ": task "<< data.get()<< " resume to "<< (data? data->status : -1)<< std::endl;
-        }
-
-        void await_suspend(test_rpc_generator::handle h) {
-            std::cout<< std::setw(4)<< __LINE__<< ": task "<< data.get()<< " suspend test_rpc_generator::handle from "<< (data? data->status : -1)<< 
-                ", wait for "<< h.address()<< std::endl;
         }
 
         void await_suspend(handle h) {
-            std::cout<< std::setw(4)<< __LINE__<< ": task "<< data.get()<< " suspend test_task_future::handle from "<< (data? data->status : -1)<< 
-                ", wait for "<< h.address()<< std::endl;
+            if (data) {
+                std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << data.get() << " suspend test_task_future::handle from " << (data ? data->status : -1) <<
+                    ", wait for " << h.address() << std::endl;
+
+                data->follower.emplace_back(h);
+            }
         }
 
         ptr_t data;
     };
 
-    struct promise_type {
-        static auto get_return_object_on_allocation_failure() { 
-            return test_task_future{nullptr}; 
-        }
-        
-        auto get_return_object() { 
-            return test_task_future{handle::from_promise(*this)}; 
-        }
-        
-        auto initial_suspend() {
-            return std::experimental::suspend_never{}; 
-        }
-        
-        auto final_suspend() { 
-            return std::experimental::suspend_always{}; 
-        }
-        
-        void unhandled_exception() { 
-            std::terminate(); 
-        }
-        
-        void return_void() {
-        }
+    bool done() const {
+        return !coro || coro.done();
+    }
 
-        auto return_value(int x) {
-            task = std::make_shared<test_task>(x);
-            return task;
-        }
-
-        ptr_t task;
-    };
-
-
-    ptr_t get_task() const noexcept {
+    ptr_t get_task() const {
         if (coro) {
             return coro.promise().task;
         }
 
         return nullptr;
     }
-private:
-    test_task_future(handle h): coro(h) {}
 
+private:
+    promise_type* promise() const {
+        if (coro) {
+            return &coro.promise();
+        }
+
+        return nullptr;
+    }
+
+private:
+    test_task_future(handle h) : coro(h) {}
     handle coro;
 };
 
-//auto operator co_await(const test_task::ptr_t& pt) noexcept {
-//    struct awaitable : test_task_future::awaiter_base {
-//		using awaiter::awaiter;
-//
-//        void await_suspend(test_task_future::handle h) {
-//            std::cout<< std::setw(4)<< __LINE__<< ": task "<< data.get()<< " suspend from "<< (data? data->status : -1)<< 
-//                ", wait for "<< h.address()<< std::endl;
-//        }
-//	};
-//
-//	return awaitable { pt };
-//}
-
-test_task_future h() {
-    co_return 5;
+// 接入 co_await test_task::ptr_t
+auto operator co_await(const test_task_future& pt) noexcept {
+    return test_task_future::awaitable { pt };
 }
 
-test_task_future g() {
-    std::cout<< "start to await h1 ..."<< std::endl;
-
-    // co_await f();
-
-    co_await h();
-
-    std::cout<< "start to await h2 ..."<< std::endl;
-
-    co_await h();
-
-    std::cout<< "all resumed, abort to finish"<< std::endl;
+test_task_future h(test_task::ptr_t task) {
+    // 模拟任务内部流程并调用外部RPC
+    std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get() << std::endl;
+    test_rpc_generator rpc_res = f();
+    co_await rpc_res;
+    std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get()<< " call f() ret: "<< rpc_res.value() << std::endl;
 }
 
-//auto run_tasks(test_task::ptr_t* begin, test_task::ptr_t* end) {
-//    bool ret = false;
-//
-//    for(; begin && end && begin < end; ++ begin) {
-//        decltype(auto) task = *begin;
-//        if (task && !task->is_ready()) {
-//            ret = true;
-//            co_await run_async(*task);
-//        }
-//    }
-//
-//    return ret;
-//}
+test_task_future g(test_task::ptr_t task) {
+    // 等待子任务完成
+    while (task && !task->is_ready()) {
+        std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get()<< std::endl;
+        co_await h(task);
+    }
+}
 
-int main(int argc, char * argv[]) {
+int main(int argc, char* argv[]) {
 #ifdef __cpp_coroutines
-    std::cout<< "__cpp_coroutines: "<< __cpp_coroutines<< std::endl;
+    std::cout << "__cpp_coroutines: " << __cpp_coroutines << std::endl;
 #endif
 
-    //test_task::ptr_t tasks[3];
-
-    //for (decltype(auto) task: tasks) {
-    //    task = std::make_shared<test_task>();
-    //}
-
-    //while (run_tasks(tasks, tasks + 3));
-
-    // g();
-
-    int rpc_fake_data = 1;
-    auto g1 = f();
-    auto g2 = f();
-    void* detect_addr = malloc(4000);
-    std::cout << "detect_addr:" << detect_addr << std::endl;
-    free(detect_addr);
-
-    for (bool is_continue = true; is_continue; is_continue = (!g1.await_ready() || !g2.await_ready())) {
-        if (!g1.await_ready()) {
-            g1.move_next(++ rpc_fake_data);
-            std::cout << "g1 value:" << g1.value() << std::endl;
-        }
-
-        if (!g2.await_ready()) {
-            g2.move_next(++ rpc_fake_data);
-            std::cout << "g2 value:" << g2.value() << std::endl;
-        }
+    // 创建一个任务
+    test_task::ptr_t task = std::make_shared<test_task>(3);
+    // 运行任务
+    auto fut = g(task);
+    // 模拟从外部获取数据然会恢复协程
+    while (!fut.done()) {
+        test_rpc_manager_run();
     }
+
     return 0;
 }
 ```
 
+promise/future 支持
+================================================
+MSVC的标准库用偏特化的方式对 std::promise 和 std::future 实现了协程的接入。它的接入代码如下:
+
+```cpp
+namespace experimental {
+    template <class _Ty, class... _ArgTypes>
+    struct coroutine_traits<future<_Ty>, _ArgTypes...> { // defines resumable traits for functions returning future<_Ty>
+        struct promise_type {
+            promise<_Ty> _MyPromise;
+
+            future<_Ty> get_return_object() {
+                return _MyPromise.get_future();
+            }
+
+            bool initial_suspend() const {
+                return false;
+            }
+
+            bool final_suspend() const {
+                return false;
+            }
+
+            template <class _Ut>
+            void return_value(_Ut&& _Value) {
+                _MyPromise.set_value(_STD forward<_Ut>(_Value));
+            }
+
+            void set_exception(exception_ptr _Exc) {
+                _MyPromise.set_exception(_STD move(_Exc));
+            }
+        };
+    };
+
+    template <class... _ArgTypes>
+    struct coroutine_traits<future<void>,
+        _ArgTypes...> { // defines resumable traits for functions returning future<void>
+        struct promise_type {
+            promise<void> _MyPromise;
+
+            future<void> get_return_object() {
+                return _MyPromise.get_future();
+            }
+
+            bool initial_suspend() const {
+                return false;
+            }
+
+            bool final_suspend() const {
+                return false;
+            }
+
+            void return_void() {
+                _MyPromise.set_value();
+            }
+
+            void set_exception(exception_ptr _Exc) {
+                _MyPromise.set_exception(_STD move(_Exc));
+            }
+        };
+    };
+} // namespace experimental
+
+template <class _Ty>
+bool await_ready(future<_Ty>& _Fut) {
+    return _Fut._Is_ready();
+}
+
+template <class _Ty>
+void await_suspend(future<_Ty>& _Fut,
+    experimental::coroutine_handle<> _ResumeCb) { // change to .then when future gets .then
+    thread _WaitingThread([&_Fut, _ResumeCb] {
+        _Fut.wait();
+        _ResumeCb();
+    });
+    _WaitingThread.detach();
+}
+
+template <class _Ty>
+auto await_resume(future<_Ty>& _Fut) {
+    return _Fut.get();
+}
+```
+
+可以看到，它的挂起是开了个新线程来等待。真他喵暴力。
+
 总结
 ================================================
+线程池
 统一的任务管理
+handle提前结束了
+更加优雅的管理调用链
 
 [1]: https://github.com/owt5008137/libcopp
 [2]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0973r0.pdf
