--- a/source/post/2019/1904.md
+++ b/source/post/2019/1904.md
@@ -560,7 +560,6 @@ struct test_task {
 
     int status;
     int max_status;
-    std::vector<std::experimental::coroutine_handle<> > follower;
 };
 
 struct test_task_future {
@@ -590,22 +589,27 @@ struct test_task_future {
         }
 
         void return_void() {
-            if (task) {
-                for (auto& h : task->follower) {
-                    h.resume();
-                }
+            for (auto& h : follower) {
+                h.resume();
             }
         }
 
+        // 这里是为了把task::ptr_t数据关联进去，目前版本不支持promise构造函数参数，没想到什么其他好方法
+        auto yield_value(ptr_t t) {
+            task = t;
+            return std::experimental::suspend_never{};
+        }
+
         ptr_t task;
+        std::vector<handle> follower;
     };
 
     // 下面的接入用非侵入式的方式支持 co_await test_task::ptr_t
     struct awaitable {
-        awaitable(const test_task_future& f) : data(f.get_task()) {
-            promise_type* p = f.promise();
-            if (p != nullptr) {
-                p->task = data;
+        awaitable(const test_task_future& pt) {
+            if (pt.coro) {
+                data = pt.coro.promise().task;
+                coro = pt.coro;
             }
         };
 
@@ -630,32 +634,19 @@ struct test_task_future {
                 std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << data.get() << " suspend test_task_future::handle from " << (data ? data->status : -1) <<
                     ", wait for " << h.address() << std::endl;
 
-                data->follower.emplace_back(h);
+            }
+
+            if (coro && h) {
+                coro.promise().follower.emplace_back(h);
             }
         }
 
         ptr_t data;
+        handle coro;
     };
 
     bool done() const {
         return !coro || coro.done();
-    }
-
-    ptr_t get_task() const {
-        if (coro) {
-            return coro.promise().task;
-        }
-
-        return nullptr;
-    }
-
-private:
-    promise_type* promise() const {
-        if (coro) {
-            return &coro.promise();
-        }
-
-        return nullptr;
     }
 
 private:
@@ -669,6 +660,9 @@ auto operator co_await(const test_task_future& pt) noexcept {
 }
 
 test_task_future h(test_task::ptr_t task) {
+    // 这里是为了把task::ptr_t数据关联进去，目前版本不支持promise构造函数参数，没想到什么其他好方法
+    co_yield task;
+
     // 模拟任务内部流程并调用外部RPC
     std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get() << std::endl;
     test_rpc_generator rpc_res = f();
@@ -677,6 +671,9 @@ test_task_future h(test_task::ptr_t task) {
 }
 
 test_task_future g(test_task::ptr_t task) {
+    // 这里是为了把task::ptr_t数据关联进去，目前版本不支持promise构造函数参数，没想到什么其他好方法
+    co_yield task;
+
     // 等待子任务完成
     while (task && !task->is_ready()) {
         std::cout << std::setw(32) << __FUNCTION__ << std::setw(3) << ": " << __LINE__ << ": task " << task.get()<< std::endl;
