--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -98,6 +98,8 @@ type: post
 
 ![1999-01.png](1999-01.png)
 
+[Anna][^anna] 的key和节点的分布也是一致性哈希。采用 [gossip][^gossip] 算法来处理actor的容灾和扩缩容。
+
 > 文中没有提到数据分片的过程，但是根据它提到的整个 [lattice][14] 是无序的，并且 **Actor Core** 之间是弱交互。我估计sharding方案不外乎是一致性哈希。然后可能在调整负载均衡节点、故障转移的时候才会涉及访问广播通道和合并操作。其他情况下像执行命令和主从同步数据都是单向的。
 
 弹性可扩展的一致性策略
@@ -122,11 +124,16 @@ type: post
 
 上面 [Anna][^anna] 和其他系统的比较里也有列出一些强一致性的系统，我觉得和这些强一致的系统比性能其实不太公平。但是 [Anna][^anna] 的一些设计层面的东西还是值得参考的，比如它对worker的设计和考量。这方面它和 [pedis][2] 也很像，而且 [pedis][2] 性能比它没差太多，但是我的理解没错的话它可以保持强一致，感觉更胜一筹。当然 [pedis][2] 功能上目前实现也还是弱了一些，事务的支持和CAS的支持都没有。也就是说乐观锁和悲观锁都还不支持，目前还是没法用于要求强一致的业务里，也就和 [Anna][^anna] 没太大区别了。
 
+从分布式设计来看，[Anna][^anna] 和 redis-cluster 的大体结构是一样的。节点间通信都是消息传递，节点维护都是 [gossip][^gossip] ，节点收到其他节点的请求都是redirect过去。区别是 [Anna][^anna] 使用的多线程设计， 而 redis-cluster 是多进程模型；[Anna][^anna] 提供了更完备的proxy层，而redis-cluster目前这方面还得靠客户端支持；然后 [Anna][^anna] 对于resharding的自动化更好一些。如果单单从单点性能的话，[Anna][^anna] 3-4万的QPS应该是略微弱于redis的。
+
+个人感觉 [Anna][^anna] 最大的优势还是在于它的 [lattice][14] 的设计。这极大地方便了对多种一致性策略的扩展。以后如果有什么新的技术方案出来也能够比较容易在这上面实现和测试。
+
 [^anna]: http://db.cs.berkeley.edu/jmh/papers/anna_ieee18.pdf "Anna: A KVS For Any Scale"
 [^redis]: https://redis.io "Redis"
 [^raft]: https://raft.github.io/ "The Raft Consensus Algorithm"
 [^spanner]: https://ai.google/research/pubs/pub39966 "Spanner: Google's Globally-Distributed Database"
 [^f1]: https://ai.google/research/pubs/pub41344 "F1: A Distributed SQL Database That Scales"
+[^gossip]: http://publicatio.bibl.u-szeged.hu/1529/1/gossip11.pdf "Gossip"
 
 [1]: https://redis.io/
 [2]: https://github.com/fastio/pedis
