--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -98,9 +98,9 @@ type: post
 
 ![1999-01.png](1999-01.png)
 
-[Anna][^anna] 的key和节点的分布也是一致性哈希。采用 [gossip][^gossip] 算法来处理actor的容灾和扩缩容。
+[Anna][^anna] 的key和节点的分布也是一致性哈希。采用 [gossip][^gossip] 算法来处理actor的容灾和扩缩容。按文中的意思似乎数据分片的同步也采用的是 [gossip][^gossip] 。不过在这一点上 [gossip][^gossip] 对分布式系统的局部分片扩容是比 [Paxos][17] 和 [Raft][18] 要好很多。
 
-> 文中没有提到数据分片的过程，但是根据它提到的整个 [lattice][14] 是无序的，并且 **Actor Core** 之间是弱交互。我估计sharding方案不外乎是一致性哈希。然后可能在调整负载均衡节点、故障转移的时候才会涉及访问广播通道和合并操作。其他情况下像执行命令和主从同步数据都是单向的。
+> 我的理解上还是觉得每个数据分片需要有主处理节点来处理写的，否则冲突率会比较高。后面文中也提到了在某些一致性策略下冲突率提高了也会影响数据同步的开销和扩容效果。
 
 弹性可扩展的一致性策略
 ================================================
@@ -116,7 +116,17 @@ type: post
 
 > 比如合并数据的时候采用按时间+节点ID排序，然后舍弃老数据。就是无论怎么合并。最终的结果一定是一致的。
 
-再比如 [**Read Committed**][13] 的一致性策略。
+再比如 [**Read Committed**][13] 的一致性策略。 其他的部分和 [**因果一致性(Causal)**][4] 一样，只要把维护Key的 [向量时钟(Vector Clock)][16] 改成用 **MaxIntLattice** 表示的最大时间戳，然后合并策略改成按最新时间戳就行了。
+
+性能
+================================================
+看 [Anna][^anna] 对比其他的 KVS 都是碾压的，但是我个人对其他 KVS的设计不熟，对 [redis][^redis] 倒是比较熟悉。所以这里贴出来它和 [redis][^redis] (主要是 redis-cluster) 的对比。
+
+![1999-03.png](1999-03.png)
+
+如图，在低争用的情况下，[Anna][^anna] 的表现和 [redis-cluster][^redis] 相近。在高争用的时候，
+
+另外它也说明了，如果一致性策略选的比较弱的话，高争用的情况下还会有Merge开销突增的情况。
 
 总结
 ================================================
@@ -124,7 +134,7 @@ type: post
 
 上面 [Anna][^anna] 和其他系统的比较里也有列出一些强一致性的系统，我觉得和这些强一致的系统比性能其实不太公平。但是 [Anna][^anna] 的一些设计层面的东西还是值得参考的，比如它对worker的设计和考量。这方面它和 [pedis][2] 也很像，而且 [pedis][2] 性能比它没差太多，但是我的理解没错的话它可以保持强一致，感觉更胜一筹。当然 [pedis][2] 功能上目前实现也还是弱了一些，事务的支持和CAS的支持都没有。也就是说乐观锁和悲观锁都还不支持，目前还是没法用于要求强一致的业务里，也就和 [Anna][^anna] 没太大区别了。
 
-从分布式设计来看，[Anna][^anna] 和 redis-cluster 的大体结构是一样的。节点间通信都是消息传递，节点维护都是 [gossip][^gossip] ，节点收到其他节点的请求都是redirect过去。区别是 [Anna][^anna] 使用的多线程设计， 而 redis-cluster 是多进程模型；[Anna][^anna] 提供了更完备的proxy层，而redis-cluster目前这方面还得靠客户端支持；然后 [Anna][^anna] 对于resharding的自动化更好一些。如果单单从单点性能的话，[Anna][^anna] 3-4万的QPS应该是略微弱于redis的。
+从分布式设计来看，[Anna][^anna] 和 redis-cluster 的大体结构是一样的。节点间通信都是消息传递，节点维护都是 [gossip][^gossip] ，节点收到其他节点的请求都是redirect过去。区别是 [Anna][^anna] 使用的多线程设计， 而 redis-cluster 是多进程模型；[Anna][^anna] 提供了更完备的proxy层，而redis-cluster目前这方面还得靠客户端支持；然后 [Anna][^anna] 对于resharding的自动化更好一些，并且还实现了热Key的动态副本。如果单单从单点性能的话，[Anna][^anna] 是和redis差不多的。
 
 个人感觉 [Anna][^anna] 最大的优势还是在于它的 [lattice][14] 的设计。这极大地方便了对多种一致性策略的扩展。以后如果有什么新的技术方案出来也能够比较容易在这上面实现和测试。
 
@@ -151,3 +161,5 @@ type: post
 [14]: https://en.wikipedia.org/wiki/Semilattice
 [15]: https://github.com/scylladb/seastar
 [16]: https://en.wikipedia.org/wiki/Vector_clock
+[17]: https://en.wikipedia.org/wiki/Paxos_(computer_science)
+[18]: https://raft.github.io/
