draft 差一点key的分布策略、时钟向量

--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -98,9 +98,8 @@ type: post
 
 ![1999-01.png](1999-01.png)
 
-[Anna][^anna] 的key和节点的分布也是一致性哈希。采用 [gossip][^gossip] 算法来处理actor的容灾和扩缩容。按文中的意思似乎数据分片的同步也采用的是 [gossip][^gossip] 。不过在这一点上 [gossip][^gossip] 对分布式系统的局部分片扩容是比 [Paxos][17] 和 [Raft][18] 要好很多。
+[Anna][^anna] 的key和节点的分布也是一致性哈希。采用 [gossip][^gossip] 算法来处理actor的容灾和扩缩容。按文中的意思似乎数据分片的同步也采用的是 [gossip][^gossip] 。不过在这一点上 [gossip][^gossip] 对分布式系统的局部分片扩容天生是比 [Paxos][17] 和 [Raft][18] 要好很多。
 
-> 我的理解上还是觉得每个数据分片需要有主处理节点来处理写的，否则冲突率会比较高。后面文中也提到了在某些一致性策略下冲突率提高了也会影响数据同步的开销和扩容效果。
 
 弹性可扩展的一致性策略
 ================================================
@@ -124,9 +123,9 @@ type: post
 
 ![1999-03.png](1999-03.png)
 
-如图，在低争用的情况下，[Anna][^anna] 的表现和 [redis-cluster][^redis] 相近。在高争用的时候，
+如图，在低争用的情况下，[Anna][^anna] 的表现和 [redis-cluster][^redis] 相近。在高争用的时候，这里说是 [Anna][^anna] 的优势比较明显。但是我个人的理解， [Anna][^anna] 的这部分性能完全来自于对一致性的舍弃上。 [redis-cluster][^redis] 是很容易配置成强一致，但是 [Anna][^anna] 是采用了多个 **Actor Core** 独立运行，然后最终进行Merge的形式。那么在高争用的时候， [redis-cluster][^redis] 相当于收敛到了少数节点上运行，但是仍然是可以实现保证一致性的；而 [Anna][^anna] 是先跑完再Merge，这种的话一致性就比较差，也很难实现CAS类的操作（否则也会fallback到少数节点执行，那么和 [Anna][^anna] 的设计模式就相背离了）。
 
-另外它也说明了，如果一致性策略选的比较弱的话，高争用的情况下还会有Merge开销突增的情况。
+它在性能消耗分析的部分也说明了，如果一致性策略选的比较弱的话，高争用的情况下还会有Merge开销激增的情况。这个Merge因为是跨节点通信的操作，所以影响还是蛮大的。
 
 总结
 ================================================
