--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -100,6 +100,9 @@ type: post
 
 [Anna][^anna] 的key和节点的分布也是一致性哈希。采用 [gossip][^gossip] 算法来处理actor的容灾和扩缩容。按文中的意思似乎数据分片的同步也采用的是 [gossip][^gossip] 。不过在这一点上 [gossip][^gossip] 对分布式系统的局部分片扩容天生是比 [Paxos][17] 和 [Raft][18] 要好很多。
 
+另外在 [Anna][^anna] 的actor中，记录了所有其他actor最后感知到这个actor事件的 [向量时钟(Vector Clock)][16] ，这样在多副本时，比如出现任意副本对某个Key的删除操作，就可以用因果关系感知到其他副本的actor都同步了这个事件之后再执行真正的垃圾回收操作。这就避免了不一致的时候再被同步回来的问题。这个事件最差情况也会由广播机制定期同步。
+
+> 其实我有点怀疑这种方案在大规模集群上的延迟，这样意味着每个actor两两之间都需要比较高密度的数据同步。后面给出的各项测试模式里也没有涉及大量节点和大规模跨机器的测试结果。大多数给的都是少数机器几十个节点的性能报告。
 
 弹性可扩展的一致性策略
 ================================================
@@ -125,7 +128,7 @@ type: post
 
 如图，在低争用的情况下，[Anna][^anna] 的表现和 [redis-cluster][^redis] 相近。在高争用的时候，这里说是 [Anna][^anna] 的优势比较明显。但是我个人的理解， [Anna][^anna] 的这部分性能完全来自于对一致性的舍弃上。 [redis-cluster][^redis] 是很容易配置成强一致，但是 [Anna][^anna] 是采用了多个 **Actor Core** 独立运行，然后最终进行Merge的形式。那么在高争用的时候， [redis-cluster][^redis] 相当于收敛到了少数节点上运行，但是仍然是可以实现保证一致性的；而 [Anna][^anna] 是先跑完再Merge，这种的话一致性就比较差，也很难实现CAS类的操作（否则也会fallback到少数节点执行，那么和 [Anna][^anna] 的设计模式就相背离了）。
 
-它在性能消耗分析的部分也说明了，如果一致性策略选的比较弱的话，高争用的情况下还会有Merge开销激增的情况。这个Merge因为是跨节点通信的操作，所以影响还是蛮大的。
+它在性能消耗分析的部分也说明了，如果一致性策略选的比较弱的话，多副本高争用的情况下还会有Merge开销激增的情况。这个Merge因为是跨节点通信的操作，在Paper提供的3副本的部署结构下大约69%的CPU消耗在这上面。所以影响还是蛮大的，相当于单点性能退化了。
 
 总结
 ================================================
