--- a/source/post/2019/1906.md
+++ b/source/post/2019/1906.md
@@ -21,15 +21,88 @@ type: post
 
 前言
 ================================================
+我们项目组最近在学习UE，然后就涉及导表这个东东。之前我已经做过一个功能比较全面并且跨平台的Excel导出protobuf、msgpack、xml、lua、json、javascript等的工具 [xresloader][2] 。并且做了方便服务器集成的CLI工具和方便策划、前端用的GUI工具。那么这次很自然地就让它能够导出UE所支持的内容就行了。
+
+其实也是看了一下周边团队的做法，参考了一下他们的流程。然后结合 UE的文档和 [xresloader][2] 的特性，让它支持导出 UE所支持的DataTable，供给项目中使用。 顺便还完成了一些之前想做但是一直没做的功能流程，那就是支持通过protobuf插件的形式配置部分数据。目前只是还是简单地加了一些插件功能，但是这个流程打通以后，后面就方便做一些更高级特性了。
 
 protobuf插件式扩展
 ================================================
+protobuf插件功能在protobuf的官方文档里没有什么详细的说明。但是根据其他一些应用和protobuf提供的descriptor.proto文件还是比较容易知道它的用法。
+
+protobuf内部数据描述保留了 1-1000 的段，那么我这里 xresloader 就使用了 1001-2000 的段。 其中 1001-1100 用来标记公共的扩展功能，其他的还可以分类放在不同的段里。
+
+我在 [xresloader][3] 的设计里早先是独立于协议的。所以内部有自己的数据结构描述，相当于也要加扩展信息的结构，用于把 protobuf 插件信息用 [xresloader][3] 内部的 AST 结构描述出来。
 
 数据输出和代码输出
 ------------------------------------------------
 
+目前数据extend支持以下扩展。
+
+```protobuf
+syntax = "proto3";
+
+import "google/protobuf/descriptor.proto";
+
+package org.xresloader;
+
+extend google.protobuf.FileOptions {
+    string file_description = 1001; // 描述信息（不同的输出可能有不同的功能）
+
+    // 用户自定义扩展字段请使用 2000 to max;
+}
+
+extend google.protobuf.MessageOptions {
+    string   msg_description          = 1001; // 描述信息（不同的输出可能有不同的功能）
+    // 用户自定义扩展字段请使用 2000 to max;
+}
+
+extend google.protobuf.FieldOptions {
+    string verifier          = 1001; // 附加验证器
+    string field_description = 1011; // 描述信息（不同的输出可能有不同的功能）
+
+    // 用户自定义扩展字段请使用 2000 to max;
+    // extensions 1000 to max;
+}
+
+```
+
+对于 File 和 Message 扩展可能目前用处不是特别大，仅仅是在输出的header里和某些代码文件里增加了一个头，用来输出一些描述信息。
+实际更有意义一点的可能是 Field 里的verifier，这样我们就可以不仅仅能在Excel里加验证器，而是直接可以把数据验证器加到类型上。比如sample里 ```role_upgrade_cfg``` 的 ```CostType``` 字段：
+
+```protobuf
+message role_upgrade_cfg {
+    uint32 Id        = 1;
+    uint32 Level     = 2;
+    uint32 CostType  = 3 [ (org.xresloader.verifier) = "cost_type", (org.xresloader.field_description) = "Refer to cost_type" ];
+    int32  CostValue = 4;
+    int32  ScoreAdd  = 5;
+}
+```
+
 UnrealEngine 的额外扩展
 ------------------------------------------------
+
+在完成上面的流程之后，增加内容就变得很容易了。 我目前给 UE 扩展插件时分配了 1101-1200 段。 UE扩展其实更需要这些功能，因为要比较好地支持 UE 里的功能，需要自定义的条目可能结构比较复杂。特别是考虑到以后会加入多索引以后。目前的扩展结构如下：
+
+```protobuf
+syntax = "proto3";
+
+import "google/protobuf/descriptor.proto";
+
+package org.xresloader.ue;
+
+extend google.protobuf.FieldOptions {
+    int64  key_tag       = 1101; // key字段映射的系数
+    string ueTypeName    = 1102; // UE内部类型(比如: TSoftObjectPtr<UTexture>)
+    bool   ueTypeIsClass = 1103; // UE内部类型是否是Class(如果为true，会生成: TSoftClassPtr<T> 而不是 TSoftObjectPtr<T>)
+}
+
+extend google.protobuf.MessageOptions {
+    string helper = 1101; // 辅助函数的类名
+}
+```
+
+主要的功能上面注释里写的应该也比较清晰了。后面也有对内哦那个更详细的说明。
 
 UnrealEngine 支持
 ================================================
