--- a/source/post/2019/1906.md
+++ b/source/post/2019/1906.md
@@ -107,6 +107,15 @@ extend google.protobuf.MessageOptions {
 UnrealEngine 支持
 ================================================
 
+UE的DataTable和UStruct数据结构
+------------------------------------------------
+
+类型支持 Bool、Enum、Numberic、UStruct、UObject。
+数据可以是 **""** 包裹的字符串，或者由字母，数字，-，+，.，/，:，组成。
+数组支持，静态长度数组。如果长度不匹配仅仅报Warning。
+子结构使用 \(\) ， 数组使用 \[\] ， CSV字符串导入 UStruct 采用 ```( Field1[0]=Value, Field1[1]=Value, Field2=Value )``` 的形式，数组导入使用 ```,``` 作为分隔符。目测不支持多级嵌套。
+Json的数组
+
 Csv、Json和ImportSetting
 ------------------------------------------------
 
