--- a/source/post/2019/1906.md
+++ b/source/post/2019/1906.md
@@ -92,13 +92,14 @@ import "google/protobuf/descriptor.proto";
 package org.xresloader.ue;
 
 extend google.protobuf.FieldOptions {
-    int64  key_tag       = 1101; // key字段映射的系数
-    string ueTypeName    = 1102; // UE内部类型(比如: TSoftObjectPtr<UTexture>)
-    bool   ueTypeIsClass = 1103; // UE内部类型是否是Class(如果为true，会生成: TSoftClassPtr<T> 而不是 TSoftObjectPtr<T>)
+    int64  key_tag        = 1101; // key字段映射的系数
+    string ue_type_name   = 1102; // UE内部类型(比如: TSoftObjectPtr<UTexture>)
+    bool ue_type_is_class = 1103; // UE内部类型是否是Class(如果为true，会生成: TSoftClassPtr<T> 而不是 TSoftObjectPtr<T>)
 }
 
 extend google.protobuf.MessageOptions {
-    string helper = 1101; // 辅助函数的类名
+    string helper = 1101;       // 辅助函数的类名
+    bool not_data_table = 1102; // 不是DataTable，helper类里不生成加载代码
 }
 ```
 
@@ -110,11 +111,13 @@ UnrealEngine 支持
 UE的DataTable和UStruct数据结构
 ------------------------------------------------
 
-类型支持 Bool、Enum、Numberic、UStruct、UObject。
-数据可以是 **""** 包裹的字符串，或者由字母，数字，-，+，.，/，:，组成。
-数组支持，静态长度数组。如果长度不匹配仅仅报Warning。
-子结构使用 \(\) ， 数组使用 \[\] ， CSV字符串导入 UStruct 采用 ```( Field1[0]=Value, Field1[1]=Value, Field2=Value )``` 的形式，数组导入使用 ```,``` 作为分隔符。目测不支持多级嵌套。
-Json的数组
+UE的数据导入支持Json和CSV两种形式。Json格式比较固定，但是CSV比较麻烦。
+
+初期我实现的第一个版本没有支持可嵌套的结构，所有的复杂结构会被打平到扁平结构再生成代码和输出数据。但是后来结合对UE的导入模块的代码分析和Csv格式的Export结果分析。其实CSV也是支持复杂格式的，而且CSV的导入代码里数据加载是流式的。所以后面又增加了一个选项 ```UeCfg-RecursiveMode=true/false``` 来控制是否要开启嵌套结构的支持，然后默认处于开启状态。
+
+在嵌套模式里，Csv所有的一级字段都是引号包裹的字符串。对于数组，是括号 ```()``` 包裹， ```,``` 分隔的数据元组。对于UStruct，则是  ```()``` 包裹， ```,``` 分隔的 ```Key=Value``` 的数据对。因为Key必须可输出为变量名，所以肯定是没有需要转义的字符的，而Value如果是字符串则需要再来一层 ```""``` 包裹起来。 因为数据的类型要么是基本类型，要么是数组或是UStruct，也没有嵌套转义的问题。
+
+另外就是输出的数据不允许空字段，不然打开UEditor的时候会报Warning。在之前所有支持的输出类型，都是支持 **optional** 字段的，但是在输出UE数据的时候，就得把数据结构中空数据的 **optional** 补全默认值。
 
 Csv、Json和ImportSetting
 ------------------------------------------------
