--- a/source/post/2019/1908.md
+++ b/source/post/2019/1908.md
@@ -12,16 +12,25 @@ tags:
   - atbus
   - libatbus
   - bus
-  - connection
-  - async
-  - tree
+  - msgpack
+  - protobuf
   - flatbuffers
-title: libatbus 的小幅优化
+title: protobuf、flatbuffer、msgpack打解包的简单对比
 type: post
 ---
 
-移除msgpack，改成flatbuffers，支持关闭异常和RTTI
-
-增加内存通道的版本号和架构校验
+前段时间我尝试给 [atframework][1] 的 [libatapp][3] 整合进UnrealEngine做Dedicated Server和逻辑server通信的时候碰到了一些问题。主要在于这些客户端引擎一般来说默认都是关闭exception的甚至会关闭RTTI。而 [libatapp][3] 所依赖的通信组件 [libatbus][2] 里内部协议是msgpack，然后是。
 
 
+flatbuffers读取时decode。
+
+protobuf开启arena后解决内存碎片问题。内存占用可控
+
+贴近实际使用场景。
+
+简单的压力测试没有太大的意义，缓存命中率高会导致和实际场景中相差很大。
+
+
+[1]: https://github.com/atframework/
+[2]: https://github.com/atframework/libatbus
+[3]: https://github.com/atframework/libatapp
