--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -317,7 +317,7 @@ use std::fmt;
 
 impl fmt::Debug for Point {
     fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
-        write!(f, "Point {{ x: {}, y: {} }}", self.x, self.y)
+        write!(f, "Point ( x: {}, y: {} )", self.x, self.y)
     }
 }
 ```
